unpackaged/main/default/objects/CampaignMember/fields/CamapaignMemberCasesafeID__c.field-meta.xml
<CustomField>
    <fullName>CamapaignMemberCasesafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Camapaign Member CasesafeID</label>
    <type>Text</type>
</CustomField>