unpackaged/main/default/objects/CampaignMember/fields/LeadCasesafeID__c.field-meta.xml
<CustomField>
    <fullName>LeadCasesafeID__c</fullName>
    <formula>CASESAFEID(LeadId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead CasesafeID</label>
    <type>Text</type>
</CustomField>